# autonomous_rover_sim

./: .gitignore  README.md
src/aruco_tracking/aruco_tracking/: aruco_node.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: default.rviz  drive.bot.rvis.rviz
src/my_robot_description/launch/: launch_sim.launch.py  rsp.launch.py
src/my_robot_description/src/: imu_analyzer.py
src/my_robot_description/urdf/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  sensors.xacro
src/my_robot_description/worlds/: aruco_world.world  aruco_world.world.save
